# photo-normalizer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
input/: IMG_2347.HEIC  IMG_2394.HEIC  IMG_2476.HEIC  IMG_2481.HEIC
src/photo_normalizer/: __init__.py  cli.py  web_app.py  web_cli.py
src/photo_normalizer/static/css/: style.css
src/photo_normalizer/static/js/: app.js
src/photo_normalizer/templates/: index.html
